Finalização do contador e do projeto

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <div class="header__infor">
       <h2 class ="header__infor__title" >Naruto Uzumaki</h2>
       <p class ="header__infor__ano">18 Anos</p>
-      <p class="header__infor__data"><i class="bi bi-calendar-check"></i> 10/07/2033</p>
+      <p class="header__infor__data"><i class="bi bi-calendar-check"></i> <span id="contador1"></span></p>
       <p id="contador"><b>Local:</b> Rua 01, Cidade - Bairro</p>
     </div>
     
@@ -25,34 +25,35 @@
   <section class="outros">
     <h2>Aniversariantes do dia </h2>
       <ul class="outros__list">
-        <li class="outros__list__item1 fundo3" data-aos="fade-left">
-          <img src="images/Meliudas.jpg" alt="Meliodas">
-          <div class="outros__list__infor">
-            <h3 class="outros__list__infor__title">Meliodas Ira do Dragão</h3>
-            <p class="outros__list__infor__text">É o protagonista e dono do bar Chapéu de Javali. Raramente fica bravo e é muito brincalhão, pervertido, confiante e gentil com aqueles com que se importa. Faz parte do clã dos demônios.</p>
-          </div>
-        </li>
-        <li class="outros__list__item1 fundo2" data-aos="fade-right">
+        
+        <a href="paginas/meliodas.html"class="outros__list__item1 fundo3" data-aos="fade-left">
+            <img src="images/Meliudas.jpg" alt="Meliodas">
+            <div class="outros__list__infor">
+              <h3 class="outros__list__infor__title">Meliodas Ira do Dragão</h3>
+              <p class="outros__list__infor__text">É o protagonista e dono do bar Chapéu de Javali. Raramente fica bravo e é muito brincalhão, pervertido, confiante e gentil com aqueles com que se importa. Faz parte do clã dos demônios.</p>
+            </div>
+          </a>
+        <a href="paginas/escanor.html" class="outros__list__item1 fundo2" data-aos="fade-right">
           <img src="images/escanor.png" alt="escanor">
           <div class="outros__list__infor">
             <h3 class="outros__list__infor__title">Escanor Orgulho do Leão</h3>
             <p class="outros__list__infor__text">Sua força e personalidade variam de acordo com a hora do dia, com o seu poder sendo imenso e sua personalidade arrogante durante o dia, mas se tornando frágil e submisso a noite. Demonstra ter sentimentos por Merlin.</p>
           </div>
-        </li>
-        <li class="outros__list__item1 fundo4" data-aos="fade-left">
+        </a>
+        <a href="paginas/king.html" class="outros__list__item1 fundo4" data-aos="fade-left">
           <img src="images/King.jpg" alt="King">
           <div class="outros__list__infor">
             <h3 class="outros__list__infor__title">King preguiça do Urso</h3>
             <p class="outros__list__infor__text">Seu verdadeiro nome é Harlequin e ele é o terceiro Rei das Fadas e protetor da Floresta das Fadas e da Fonte da Juventude em seu interior. King é gentil, empático, respeitoso, mas feroz quando necessário.</p>
           </div>
-        </li>
-        <li class="outros__list__item1 fundo1" data-aos="fade-right">
+        </a>
+        <a href="paginas/diane.html" class="outros__list__item1 fundo1" data-aos="fade-right">
           <img src="images/Diane.jpg" alt="Diane">
           <div class="outros__list__infor">
             <h3 class="outros__list__infor__title">Diane inveja da Serpente</h3>
             <p class="outros__list__infor__text">Faz parte do clã de gigantes, possui um enorme poder físico e uma conexão profunda com a terra. Ela é confiante, pavio curto e fará qualquer coisa para proteger uma vida inocente.</p>
           </div>
-        </li>
+        </a>
       </ul>
   </section>
   <footer class="footer container">
@@ -70,6 +71,7 @@
     </div>
   </footer>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="main.js"></script>
+  <script src="./scripts/main.js"></script>
+  
 </body>
 </html>
