--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
   <Section class="header ">
-     <div><img src="images/naturo1.webp" alt="Naruto"></div>
+     <div><img src="images/ban-idade.jpg" alt="Ban"></div>
     <div class="header__infor">
-      <h2 class ="header__infor__title" >Naruto Uzumaki</h2>
+      <h2 class ="header__infor__title" >Ban Ganância da Raposa.</h2>
       <p class ="header__infor__ano">18 Anos</p>
       <p class="header__infor__data"><i class="bi bi-calendar-check"></i> <span id="contador1"></span></p>
       <p id="contador"><b>Local:</b> Rua 01, Cidade - Bairro</p>
