--- a/src/index.html
+++ b/src/index.html
@@ -26,28 +26,28 @@
     <h2>Aniversariantes do dia </h2>
       <ul class="outros__list">
         
-        <a href="paginas/meliodas.html"class="outros__list__item1 fundo3" data-aos="fade-left">
+        <a href="paginas/meliodas.html"class="outros__list__item1 fundo3" data-aos="fade-right">
             <img src="images/Meliudas.jpg" alt="Meliodas">
             <div class="outros__list__infor">
               <h3 class="outros__list__infor__title">Meliodas Ira do Dragão</h3>
               <p class="outros__list__infor__text">É o protagonista e dono do bar Chapéu de Javali. Raramente fica bravo e é muito brincalhão, pervertido, confiante e gentil com aqueles com que se importa. Faz parte do clã dos demônios.</p>
             </div>
           </a>
-        <a href="paginas/escanor.html" class="outros__list__item1 fundo2" data-aos="fade-right">
+        <a href="paginas/escanor.html" class="outros__list__item1 fundo2" data-aos="fade-top">
           <img src="images/escanor.png" alt="escanor">
           <div class="outros__list__infor">
             <h3 class="outros__list__infor__title">Escanor Orgulho do Leão</h3>
             <p class="outros__list__infor__text">Sua força e personalidade variam de acordo com a hora do dia, com o seu poder sendo imenso e sua personalidade arrogante durante o dia, mas se tornando frágil e submisso a noite. Demonstra ter sentimentos por Merlin.</p>
           </div>
         </a>
-        <a href="paginas/king.html" class="outros__list__item1 fundo4" data-aos="fade-left">
+        <a href="paginas/king.html" class="outros__list__item1 fundo4" data-aos="fade-right">
           <img src="images/King.jpg" alt="King">
           <div class="outros__list__infor">
             <h3 class="outros__list__infor__title">King preguiça do Urso</h3>
             <p class="outros__list__infor__text">Seu verdadeiro nome é Harlequin e ele é o terceiro Rei das Fadas e protetor da Floresta das Fadas e da Fonte da Juventude em seu interior. King é gentil, empático, respeitoso, mas feroz quando necessário.</p>
           </div>
         </a>
-        <a href="paginas/diane.html" class="outros__list__item1 fundo1" data-aos="fade-right">
+        <a href="paginas/diane.html" class="outros__list__item1 fundo1" data-aos="fade-top">
           <img src="images/Diane.jpg" alt="Diane">
           <div class="outros__list__infor">
             <h3 class="outros__list__infor__title">Diane inveja da Serpente</h3>
